--- a/styles/layout2.css
+++ b/styles/layout2.css
@@ -1,52 +1,60 @@
-body {
+.container {
   width: 960px;
   margin: 20px auto 0px auto;
+  height: 800px;
+  display: grid;
+  grid-template-rows: 100px 250px 1fr 50px;
+  grid-template-columns: repeat(4, 1fr);
+  grid-gap: 10px;
 }
 
-div, footer {
+.sec2 div, footer, .logo, .itemList {
   background-color: silver;
 }
 
-header, section, main, footer {
-  display: grid;
-  width: 100%;
-  margin-bottom: 20px;
-}
-
-.itemListContainer {
-  display: grid;
-  grid-template: 50px / 1fr 1fr 1fr 1fr;
-  justify-items: center;
-}
-
 header {
-  grid-template: 80px / 200px 1fr;
-  grid-gap: 300px;
+  grid-column: 1/5;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-gap: 10px;
 }
 
-header div:last-of-type {
+.logo {
+  grid-column: 1/2;
+}
+
+.itemList {
   height: 50px;
+  grid-column: 3/5;
   align-self: center;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
 }
 
-section {
-  grid-template-rows: 100px;
+.itemList span {
+  align-self: center;
+  justify-self: center;
 }
 
-main {
+.sec1 {
+  display: grid;
+  grid-column: 1/5;
+}
+
+.sec2 {
+  grid-column: 1/5;
+  display: grid;
   grid-template-rows: repeat(3, 1fr);
   grid-template-columns: repeat(3, 1fr);
   grid-gap: 10px;
 }
 
-main > div {
-  background-color: silver;
-  width: 313px;
-  height: 150px;;
+footer {
+  display: grid;
+  grid-column: 1/5;
 }
 
-footer {
-  height: 50px;
-  align-items: center;
-  justify-items: center;
+footer span {
+  align-self: center;
+  justify-self: center;
 }
